@@ -11,6 +11,7 @@
 .: WSM: Task: Add default shop banner image (WSM-55)
 .: WSM: Task: Crop image as square to have better UI (WSM-99)
 .: WSM: Task: Change Share URL to username (WSM-101)
+.: WSM: Task: Update shop profile image (WSM-105)
 
 ---------------------------------------------
 - 2020-06-04                                -
